--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div class="course-col">
                 <h3>Video Training</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam sapiente totam voluptatibus <br>optio laudantium dolore velit eum, eius quisquam! Porro nam, suscipit numquam veritatis dignissimos vitae tempora. Mollitia, tempore?</p>
-                <a href="video.html" class="hero-btn">Watch The Video</a>
+                <a href="video.html"target="_blank" class="hero-btn">Watch The Video</a>
             </div>
             <div class="course-col">
                 <h3>Test</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam sapiente totam voluptatibus <br>optio laudantium dolore velit eum, eius quisquam! Porro nam, suscipit numquam veritatis dignissimos vitae tempora. Mollitia, tempore?</p>
-                <a href="SLAM.html" class="hero-bttn">Click to take the test</a>
+                <a href="SLAM.html" target="_blank" class="hero-bttn">Click to take the test</a>
             </div>
         </div>
 
