--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
 
         <div class="text-box">
-            <h1>U.S. Best Cybersecurity Company</h1>
+            <h1>Catch Them All</h1>
             <p>Everything you need to obtain a zero-incident rate<br>Focus on four key areas of security awareness training to ensure
                 your employees recognize every cyber threat and know how to handle it.</p>
                 
@@ -61,12 +61,12 @@
         <div class="row">
             <div class="course-col">
                 <h3>Video Training</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam sapiente totam voluptatibus <br>optio laudantium dolore velit eum, eius quisquam! Porro nam, suscipit numquam veritatis dignissimos vitae tempora. Mollitia, tempore?</p>
+                <p>This video will explain to you how to use the SLAM method to figure out if an email in fact is a phishing email.</p>
                 <a href="video.html"target="_blank" class="hero-btn">Watch The Video</a>
             </div>
             <div class="course-col">
                 <h3>Test</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat ullam sapiente totam voluptatibus <br>optio laudantium dolore velit eum, eius quisquam! Porro nam, suscipit numquam veritatis dignissimos vitae tempora. Mollitia, tempore?</p>
+                <p>To learn more about the SLAM method, Take the test below.</p>
                 <a href="SLAM.html" target="_blank" class="hero-bttn">Click to take the test</a>
             </div>
         </div>
